feat: 新增登录授权鉴权接口（旧代码未清除），新接口逻辑有部分调整，与接口设计同步
